update translation of articles/hubs to Russian
Reviewed by: maxim (mentor)
Approved by: maxim (mentor)
Differential Revision: https://reviews.freebsd.org/D52020

--- a/documentation/content/ru/articles/hubs/_index.adoc
+++ b/documentation/content/ru/articles/hubs/_index.adoc
@@ -1,15 +1,20 @@
 ---
-title: Поддержка зеркал FreeBSD
 authors:
-  - author: Jun Kuriyama
+  - 
+    author: 'Jun Kuriyama'
     email: kuriyama@FreeBSD.org
-  - author: Valentino Vaschetto
+  - 
+    author: 'Valentino Vaschetto'
     email: logo@FreeBSD.org
-  - author: Daniel Lang
+  - 
+    author: 'Daniel Lang'
     email: dl@leo.org
-  - author: Ken Smith
+  - 
+    author: 'Ken Smith'
     email: kensmith@FreeBSD.org
-  - author: Дмитрий Морозовский
+description: 'Полное руководство по зеркалированию веб-сайта FreeBSD, FTP-серверов и многого другого'
+tags: ["Mirroring", "FreeBSD", "Hub"]
+title: 'Поддержка зеркал FreeBSD'
 trademarks: ["freebsd", "general"]
 ---
 
@@ -69,7 +74,7 @@ toc::[]
 [[mirror-diskspace]]
 === Дисковое пространство
 
-Одним из наиболее важных требований является дисковое пространство. В зависимости от набора релизов, архитектур и степени полноты зеркала вам может потребоваться огромный объем диска. Не лишним будет помнить, что _официальное_ зеркало, скорее всего, должно быть полным. Веб-страницы всегда должны зеркалироваться полностью. Кроме того, учтите, что приводимые оценки объема относятся к состоянию на момент последнего редактирования данной статьи ({rel112-current}-RELEASE/{rel120-current}-RELEASE). Дальнейший процесс разработки и последующие релизы только увеличат требуемый объем. Кроме того, разумно будет зарезервировать некоторое (10-20%) дополнительное пространство спокойствия ради. Вот некоторые оценки объема:
+Одним из наиболее важных требований является дисковое пространство. В зависимости от набора релизов, архитектур и степени полноты зеркала вам может потребоваться огромный объем диска. Не лишним будет помнить, что _официальное_ зеркало, скорее всего, должно быть полным. Веб-страницы всегда должны зеркалироваться полностью. Кроме того, учтите, что приводимые оценки объема относятся к состоянию на момент последнего редактирования данной статьи ({rel120-current}-RELEASE/{rel113-current}-RELEASE). Дальнейший процесс разработки и последующие релизы только увеличат требуемый объем. Кроме того, разумно будет зарезервировать некоторое (10-20%) дополнительное пространство спокойствия ради. Вот некоторые оценки объема:
 
 * Полное зеркало FTP: 1.4 TB
 * Комплект изменений CTM: 10 GB
@@ -89,7 +94,7 @@ toc::[]
 [[mirror-system]]
 === Системные требования, процессор и память
 
-Эти требования в первую очередь определяются максимальным ожидаемым количеством клиентов (устанавливается администратором сервера). Также, на требуемые ресурсы влияет список сервисов, которые вы будете предоставлять. Зеркала FTP и/или HTTP не требуют особенно много ресурсов. Будьте на чеку, если планируете предоставлять rsync. Выбор rsync может иметь огромное влияние на требования к аппаратным ресурсам, поскольку rsync признан "прожорливым" по памяти. Вот некоторые советы по конфигурации аппаратной части сервера:
+Эти требования в первую очередь определяются максимальным ожидаемым количеством клиентов (устанавливается администратором сервера). Также, на требуемые ресурсы влияет список сервисов, которые вы будете предоставлять. Зеркала FTP и/или HTTP не требуют особенно много ресурсов. Будьте на чеку, если планируете предоставлять rsync. Выбор rsync может иметь огромное влияние на требования к аппаратным ресурсам, поскольку rsync признан "прожорливым" по памяти. Вот некоторые советы по конфигурации аппаратной части сервера.
 
 Для умеренно посещаемого сайта, предоставляющего rsync, можно использовать процессор с частотой 800MHz - 1 GHz и по крайней мере 512MB памяти. Скорее всего, данная конфигурация может считаться минимальной для _официального_ зеркала.
 
@@ -107,7 +112,7 @@ toc::[]
 
 Это один из наиболее базовых сервисов; его предоставление требуется для каждого зеркала, распространяющего файлы FreeBSD по FTP. Доступ по FTP должен быть анонимным, и не должны применяться какие-либо ограничения по соотношению объема передано/принято (что вообще является, на наш взгляд, странным подходом). Закачка (upload) файлов на сервер не требуется (и _должна_ быть запрещена в разделе FreeBSD). Кроме того, архив файлов FreeBSD должен быть доступен с путем [.filename]#/pub/FreeBSD#.
 
- Для предоставления анонимного FTP доступа может быть использован целый ряд программ (перечислены в алфавитном порядке):
+Для предоставления анонимного FTP доступа может быть использован целый ряд программ (перечислены в алфавитном порядке).
 
 * `/usr/libexec/ftpd`: базовый FTP-даемон FreeBSD. Не забудьте прочитать man:ftpd[8].
 * package:ftp/ncftpd[]: коммерческий пакет, свободен для использования в учебных целях.
@@ -129,12 +134,14 @@ rsync часто используется для предоставления д
 [[mirror-serv-http]]
 ==== HTTP (требуется для веб-страниц, дополнителен для FTP зеркал)
 
-Если вы хотите поддерживать зеркало веб-страниц FreeBSD, вам потребуется установить веб-сервер. Дополнительно, вы можете предоставлять HTTP доступ к FTP-набору файлов FreeBSD. Выбор веб-сервера остается на усмотрение администратора зеркала. Некоторые из наиболее популярных веб-серверов перечислены ниже.
+Если вы хотите поддерживать зеркало веб-страниц FreeBSD, вам потребуется установить веб-сервер. Дополнительно, вы можете предоставлять HTTP доступ к FTP-набору файлов FreeBSD. Выбор веб-сервера остается на усмотрение администратора зеркала. Некоторые из наиболее популярных веб-серверов перечислены ниже:
 
-* package:www/apache13[]: Apache - самый широко распространённый в Интернете веб-сервер, активно используемый проектом FreeBSD. Вы можете также использовать веб-сервер Apache следующего поколения, доступный в коллекции портов как package:www/apache22[].
-* package:www/thttpd[]: Для обслуживания большого количества запросов к статическим документам сервер thttpd может оказаться более эффективным, чем Apache. thttpd отлично оптимизирован по производительности при работе под FreeBSD.
-* package:www/boa[]: Boa - еще одна альтернатива thttpd и Apache. Этот сервер должен быть ощутимо более высокопроизводительным, чем Apache, для полностью статических страниц. На время написания данного документа, впрочем, он не так хорошо оптимизирован под FreeBSD, как thttpd.
-* package:www/nginx[]: Nginx - высокопроизводительный веб-сервер, отличающийся низкими требованиями к объему оперативной памяти и обладающий ключевыми функциональными возможностями для построения современной веб-инфраструктуры. Функциональные возможности включают следующее: HTTP-сервер, обратный прокси для HTTP, почтовый прокси сервер, кеширование, балансировка нагрузки, сжатие, ограничение количества запросов, мультиплексирование и повторное использование соединений, поддержка разгрузки SSL (SSL offload) и вещания медиапотоков (media streaming).
+* package:www/apache24[]: Apache - самый широко распространённый в Интернете веб-сервер, активно используемый проектом FreeBSD.
+* package:www/boa[]: Boa - это однозадачный HTTP-сервер. В отличие от традиционных веб-серверов, он не создает отдельные процессы для каждого входящего соединения и не запускает множество копий самого себя для обработки множества соединений. Тем не менее, он должен обеспечивать значительно более высокую производительность для чисто статического контента.
+* package:www/cherokee[]: Cherokee — это очень быстрый, гибкий и простой в настройке веб-сервер. Он поддерживает распространённые современные технологии: FastCGI, SCGI, PHP, CGI, SSL/TLS-шифрование соединений, виртуальные хосты, аутентификацию пользователей, динамическое кодирование и балансировку нагрузки. Также он генерирует журналы, совместимые с Apache.
+* package:www/lighttpd[]: lighttpd — это безопасный, быстрый, совместимый и очень гибкий веб-сервер, оптимизированный для высокопроизводительных сред. По сравнению с другими веб-серверами, он имеет очень низкое потребление памяти и эффективно распределяет нагрузку на процессор.
+* package:www/nginx[]: nginx — это высокопроизводительный веб-сервер с низким потреблением памяти и ключевыми функциями для построения современной и эффективной веб-инфраструктуры. Возможности включают HTTP-сервер, обратный прокси для HTTP и почты, кэширование, балансировку нагрузки, сжатие, ограничение запросов, мультиплексирование и повторное использование соединений, выгрузку SSL и потоковую передачу HTTP-медиа.
+* package:www/thttpd[]: Если вам необходимо обслуживать большое количество статического контента, вы можете обнаружить, что использование приложения, такого как thttpd, более эффективно по сравнению с другими. Оно также оптимизировано для отличной производительности в FreeBSD.
 
 [[mirror-howto]]
 == Как вести зеркало FreeBSD
@@ -155,7 +162,7 @@ rsync часто используется для предоставления д
 
 Строка для синхронизации FreeBSD по rsync выглядит примерно так:
 
-[source,shell]
+[source, shell]
 ....
 % rsync -vaHz --delete rsync://ftp4.de.FreeBSD.org/FreeBSD/ /pub/FreeBSD/
 ....
@@ -165,25 +172,65 @@ rsync часто используется для предоставления д
 [[mirror-www]]
 === Зеркалирование страниц WWW
 
-Веб-сайт FreeBSD следует зеркалировать исключительно при помощи rsync.
+[WARNING]
+====
+После перевода документации на Hugo/Asciidoctor 2021-01-25, зеркалирование веб-сайта с помощью rsync больше не работает.
+====
 
-Командная строка для синхронизации веб-сайта FreeBSD выглядит примерно так:
+Ведутся исследования по реализации зеркала веб-сайта с использованием extref:{handbook}mirrors/[официальной инфраструктуры].
 
+Для прежних зеркал веб-сайтов способ достичь зеркалирования сегодня — это собрать веб-сайт локально с соответствующим адресом, на котором он будет размещён.
+
+[source, shell]
+....
+% cd website && env HUGO_baseURL="https://www.XX.freebsd.org/" make
+....
+
+Проверьте дополнительные сведения о инструментах сборки в extref:{fdp-primer}overview/[Проект документации FreeBSD: введение для новых участников, overview-quick-start].
+
+////
 [source,shell]
 ....
 % rsync -vaHz --delete rsync://bit0.us-west.freebsd.org/FreeBSD-www-data/ /usr/local/www/
 ....
+////
+
+[NOTE]
+====
+Обратите внимание, что сайт был разделён на www.FreeBSD.org и docs.FreeBSD.org, и между ними есть ссылки; кроме того, на данный момент переменная `HUGO_baseURL` не охватывает все ссылки, поэтому зеркалирование сайта не рекомендуется.
+====
+
+[[mirror-pkgs]]
+=== Зеркалирование пакетов
+
+Из-за очень высоких требований к пропускной способности, хранилищу и администрированию проект FreeBSD принял решение не разрешать публичные зеркала пакетов. Для сайтов с большим количеством машин может быть выгодно запустить кэширующий HTTP-прокси для процесса man:pkg[8]. Или конкретные пакеты и их зависимости можно загрузить, выполнив что-то вроде следующего:
+
+[source, shell]
+....
+% pkg fetch -d -o /usr/local/mirror vim
+....
+
+После загрузки этих пакетов необходимо сгенерировать метаданные репозитория, выполнив:
+
+[source, shell]
+....
+% pkg repo /usr/local/mirror
+....
+
+После загрузки пакетов и генерации метаданных репозитория предоставьте пакеты клиентским машинам через HTTP. Дополнительную информацию можно найти на man-страницах man:pkg[8], в частности на странице man:pkg-repo[8].
 
 [[mirror-how-often]]
 === Как часто синхронизироваться?
 
-Каждое зеркало должно регулярно обновляться. Вам потребуется какой-то набор скриптов, выполняемых посредством man:cron[8]. Поскольку каждый администратор, как правило, пишет такие скрипты сам и на свой лад, мы не можем выдать конкретных указаний. Общие же советы выглядят так:
+Каждое зеркало должно обновляться как минимум раз в день. Конечно, потребуется скрипт с блокировкой, чтобы предотвратить одновременный запуск нескольких копий, который будет запускаться из man:cron[8]. Поскольку почти каждый администратор делает это по-своему, конкретные инструкции предоставить невозможно. Это может работать примерно так:
 
 [.procedure]
+====
 . Создайте скрипт с командой, которая запустит нужное приложение для обновления зеркала. Рекомендуем использовать скрипт на языке обычного `/bin/sh`.
 . Добавьте команд перенаправления вывода, чтобы записать диагностику работы в файл.
-. Попробуйте, как ваш скрипт работает. По завершении проверьте логи.
+. Попробуйте, как ваш скрипт работает. По завершении проверьте журналы.
 . При помощи утилиты man:crontab[1] добавьте ваш скрипт в таблицу регулярных заданий man:crontab[5] соответствующего пользователя. Это должен быть пользователь, отличный от пользователя FTP-даемона, чтобы файлы в FTP-области без атрибута "чтение для всех" не были доступны анонимным FTP-пользователям. Данное свойство используется для тестирования перед выходом новых релизов, для того чтобы удостовериться, что все официальные зеркала содержат все необходимые файлы к моменту официального объявления релиза.
+====
 
 Некоторые рекомендуемые установки частоты обновления:
 
@@ -210,24 +257,26 @@ rsync часто используется для предоставления д
 [[mirror-where-simple]]
 ==== Я хочу получить копию зеркала хоть откуда-нибудь!
 
-Если у вас нет каких-либо специальных предпочтений или требований, см. <<mirror-where-where>>. Это означает:
+Если у вас нет особых намерений или требований, применимо утверждение в crossref:hubs[mirror-where-where, Так откуда же мне синхронизироваться?]. Это означает:
 
 [.procedure]
+====
 . Выберите те из них, с которыми вам работать быстрее всего (меньшее число промежуточных узлов и время отклика), и которые предоставляют нужные вам сервисы (такие как rsync).
 . Свяжитесь с администраторами выбранного сервера, опишите ваши запросы и уточните их правила.
 . Сконфигурируйте ваше зеркало, как описывалось выше.
+====
 
 [[mirror-where-official]]
 ==== Я поддерживаю официальное зеркало, какой сайт мне выбрать?
 
-В основном, правила, описанные в <<mirror-where-simple>>, применимы. Дополнительно можно убедиться, что выбранный сайт принадлежит низкому слою. Другие соображения относительно _официальных_ зеркал описаны в <<mirror-official>>.
+В основном, правила, описанные в crossref:hubs[mirror-where-simple, Я хочу получить копию зеркала хоть откуда-нибудь!], применимы. Дополнительно можно убедиться, что выбранный сайт принадлежит низкому слою. Другие соображения относительно _официальных_ зеркал описаны в <<mirror-official>>.
 
 [[mirror-where-master]]
 ==== Мне нужен доступ к основным сайтам!
 
 При наличии достаточных причин вы можете получить доступ к одному из основных сайтов. Доступ к ним ограничен; существуют специальные правила их использования. Наличие у вас статуса _официального_ зеркала, безусловно, является хорошим подспорьем. В противном случае убедитесь, что ваша страна действительно нуждается еще в одном зеркале. Если их уже три или более, сначала свяжитесь с администратором соответствующей зоны DNS (mailto:hostmaster@CC.FreeBSD.org[hostmaster@CC.FreeBSD.org]) или напишите в {freebsd-hubs}.
 
-Доступ к одному из мастер-сайтов или подходящему зеркалу 1 уровня вам помогут обеспечить те же, кто помогал вам получить статус _официального_ зеркала. В случае неудачи свяжитесь с mailto:mirror-admin@FreeBSD.org[mirror-admin@FreeBSD.org] и попросите помощи у них.
+Тот, кто помог вам стать _официальным_ зеркалом, должен был помочь вам получить доступ к соответствующему вышестоящему хосту — либо к одному из основных сайтов, либо к подходящему сайту уровня Tier-1. Если этого не произошло, вы можете отправить письмо по адресу mailto:mirror-admin@FreeBSD.org[mirror-admin@FreeBSD.org], чтобы запросить помощь в этом вопросе.
 
 Существует один основной сайт для синхронизации набора файлов FTP.
 
@@ -236,14 +285,14 @@ rsync часто используется для предоставления д
 
 Это основной сервер для синхронизации FTP набора.
 
-В дополнение к FTP, `ftp-master.FreeBSD.org` поддерживает доступ по rsync. Использование этих протоколов описано в <<mirror-ftp-rsync>>.
+В дополнение к FTP, `ftp-master.FreeBSD.org` поддерживает доступ по rsync. Использование этих протоколов описано в crossref:hubs[mirror-ftp-rsync, Mirroring the FTP Site].
 
 Приветствуется предоставление зеркалами _1 уровня_ доступа к FTP-области по протоколу rsync.
 
 [[mirror-official]]
 == Официальные зеркала
 
-Официальные зеркала обладают следующим свойствами:
+Официальные зеркала обладают следующим свойствами
 
 * a) имеют запись в домене `FreeBSD.org` (обычно типа CNAME).
 * b) присутствуют в списке официальных зеркал в Руководстве по FreeBSD и другой документации.
@@ -259,13 +308,13 @@ rsync часто используется для предоставления д
 
 * поддерживать полный список файлов
 * предоставлять доступ для других зеркал
-* обеспечивать доступ по протоколам ftp и rsync.
+* обеспечивать доступ по протоколам ftp и rsync
 
-Кроме того, администратор такого зеркала должен быть подписан на {freebsd-hubs}. См. extref:{handbook}eresources[здесь, eresources-mail] для дополнительной информации о подписке.
+Кроме того, администратор такого зеркала должен быть подписан на {freebsd-hubs}. См. extref:{handbook}[здесь, eresources-mail] для дополнительной информации о подписке.
 
 [IMPORTANT]
 ====
-Администраторы зеркал, в особенности 1 уровня, должны _очень_ внимательно следить за http://www.FreeBSD.org/releng/[графиком релизов]. Это поможет подготовиться к крупным всплескам нагрузки на зеркало, которые всегда происходят после очередного релиза.
+Очень важно для администратора хаба, особенно администраторов хаба уровня Tier-1, проверять https://www.FreeBSD.org/releng/[график выпусков] следующего релиза FreeBSD. Это важно, потому что это позволит вам узнать, когда запланирован выход следующего релиза, и, таким образом, даст вам время подготовиться к большому всплеску трафика, который последует за ним.
 
 Кроме того, важно поддерживать актуальность зеркал (в особенности зеркал уровня 1). Если Зеркало1 не синхронизировалось в течение длительного времени, то зеркала следующего уровня будут синхронизироваться по устаревшей информации и т.д. Поддерживайте актуальность ваших зеркал!
 ====
@@ -273,17 +322,15 @@ rsync часто используется для предоставления д
 [[mirror-official-become]]
 === Как стать официальным зеркалом?
 
-На текущий момент заявки на подключение новых зеркал не принимаются.
+Обратитесь к администраторам кластера, как указано в документации по адресу https://www.FreeBSD.org/administration/#t-clusteradm.
 
 [[mirror-statpages]]
 == Статистика некоторых зеркал
 
-Вот несколько ссылок на статистику использования зеркал
+Вот ссылки на страницы статистики ваших любимых зеркал (иначе говоря, единственных, кто предоставляет такую статистику).
 
 [[mirror-statpagesftp]]
 === Статистика FTP сайтов
 
-* ftp.is.FreeBSD.org - mailto:hostmaster@is.FreeBSD.org[hostmaster@is.FreeBSD.org] - http://www.rhnet.is/status/draupnir/draupnir.html[ (загрузка канала)] http://www.rhnet.is/status/ftp/ftp-notendur.html[(FTP процессы)] http://www.rhnet.is/status/ftp/http-notendur.html[(HTTP процессы)]
-* ftp.cz.FreeBSD.org - mailto:cejkar@fit.vutbr.cz[cejkar@fit.vutbr.cz] - http://www.cz.FreeBSD.org/stats/mrtg/net.html[(загрузка канала)] http://www.freebsd.cz/stats/mrtg/ftpd.html[(FTP процессы)] http://www.freebsd.cz/stats/mrtg/rsyncd.html[(rsync процессы)]
-
+* ftp.is.FreeBSD.org - mailto:hostmaster@is.FreeBSD.org[hostmaster@is.FreeBSD.org] - http://www.rhnet.is/status/draupnir/draupnir.html[ (Bandwidth)] http://www.rhnet.is/status/ftp/ftp-notendur.html[(FTP processes)] http://www.rhnet.is/status/ftp/http-notendur.html[(HTTP processes)]
 * ftp2.ru.FreeBSD.org - mailto:mirror@macomnet.ru[mirror@macomnet.ru] - http://mirror.macomnet.net/mrtg/mirror.macomnet.net_195.128.64.25.html[(Bandwidth)] http://mirror.macomnet.net/mrtg/mirror.macomnet.net_proc.html[(HTTP and FTP users)]
