--- a/website/content/en/releases/15.0R/schedule.adoc
+++ b/website/content/en/releases/15.0R/schedule.adoc
@@ -39,15 +39,24 @@ General discussions about the pending release and known issues should be sent to
 |ALPHA2 builds begin |12 September 2025 |14 September 2025 |Second alpha test snapshot.
 |ALPHA3 builds begin |19 September 2025 |20 September 2025 |Third alpha test snapshot.
 |ALPHA4 builds begin |26 September 2025 |26 September 2025 |Fourth alpha test snapshot.
-|{localBranchReleng} branch |3 October 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
-|BETA1 builds begin |3 October 2025 |- |First beta test snapshot.
-|BETA2 builds begin |10 October 2025 |- |Second beta test snapshot.
-|BETA3 builds begin |17 October 2025 |- |Third beta test snapshot.
-|BETA4 builds begin |24 October 2025 |- |Fourth beta test snapshot.
-|RC1 builds begin |31 October 2025 |- |First release candidate.
-|RC2 builds begin* |7 November 2025 |- |Second release candidate.
-|RC3 builds begin* |14 November 2025 |- |Third release candidate.
-|RC4 builds begin* |21 November 2025 |- |Fourth release candidate.
+|ALPHA5 builds begin |3 October 2025 |- |Fifth alpha test snapshot.
+|{localBranchReleng} branch |[.line-through]*3 October 2025* +
+10 October 2025 |- |{localBranchReleng} branch created; future release engineering proceeds on this branch.
+|BETA1 builds begin |[.line-through]*3 October 2025* +
+10 October 2025 |- |First beta test snapshot.
+|BETA2 builds begin |[.line-through]*10 October 2025* +
+17 October 2025 |- |Second beta test snapshot.
+|BETA3 builds begin |[.line-through]*17 October 2025* +
+24 October 2025 |- |Third beta test snapshot.
+|BETA4 builds begin |[.line-through]*24 October 2025* +
+31 October 2025 |- |Fourth beta test snapshot.
+|RC1 builds begin |[.line-through]*31 October 2025* +
+7 November 2025 |- |First release candidate.
+|RC2 builds begin* |[.line-through]*7 November 2025* +
+14 November 2025 |- |Second release candidate.
+|RC3 builds begin* |[.line-through]*14 November 2025* +
+21 November 2025 |- |Third release candidate.
+|[.line-through]*RC4 builds begin* |[.line-through]*21 November 2025* |- |[.line-through]*Fourth release candidate.*
 |RELEASE builds begin |28 November 2025 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |2 December 2025 |- |{localRel}-RELEASE press release.
 |{localRel} EoL |30 September 2026 |- |{localRel}-RELEASE no longer supported.
