update supported and unsupported platforms

--- a/website/content/zh-tw/platforms/_index.adoc
+++ b/website/content/zh-tw/platforms/_index.adoc
@@ -13,28 +13,40 @@ include::shared/zh-tw/urls.adoc[]
 
 以下列出 FreeBSD 目前支援的平台清單。
 
-[cols=",,",options="header",]
+[.tblbasic]
+[cols=",,,,",options="header",]
 |===
-|計劃頁面 |郵件論壇 |link:{committers-guide}#archs[支援平台]
-|link:https://www.FreeBSD.org/platforms/amd64/[FreeBSD/amd64 計劃] |freebsd-amd64@FreeBSD.org |Tier 1
-|link:https://www.FreeBSD.org/platforms/arm/[FreeBSD/ARM 計劃] |freebsd-arm@FreeBSD.org |Tier 2
-|link:https://www.FreeBSD.org/platforms/arm/[FreeBSD/arm64 計劃] |freebsd-arm@FreeBSD.org |Tier 2
-|link:https://www.FreeBSD.org/platforms/i386/[FreeBSD/i386 計劃] |freebsd-current@FreeBSD.org |Tier 1
-|link:https://www.FreeBSD.org/platforms/mips/[FreeBSD/MIPS 計劃] |freebsd-mips@FreeBSD.org |Tier 3
-|link:https://www.FreeBSD.org/platforms/ppc/[FreeBSD/ppc 計劃] |freebsd-ppc@FreeBSD.org |Tier 2
-|link:https://www.FreeBSD.org/platforms/sparc/[FreeBSD/sparc64 計劃] |freebsd-sparc@FreeBSD.org |Tier 2
-|link:https://www.FreeBSD.org/platforms/xbox/[FreeBSD/xbox 計劃] |freebsd-current@FreeBSD.org |N/A
+|平台名稱 |TARGET_ARCH |13.x link:{committers-guide}#archs[支援等級] |14.x link:{committers-guide}#archs[支援等級] |15.x 預期 link:{committers-guide}#archs[支援等級]
+|64-bit x86 |link:https://www.FreeBSD.org/platforms/amd64/[amd64] |Tier 1 |Tier 1 |Tier 1
+|32-bit x86 |link:https://www.FreeBSD.org/platforms/i386/[i386] |Tier 2 |Tier 2 |未支援
+|64-bit ARMv8 |link:https://www.FreeBSD.org/platforms/arm/[aarch64] |Tier 1 |Tier 1 |Tier 1
+|32-bit ARMv6 |link:https://www.FreeBSD.org/platforms/arm/[armv6] |Tier 2 |Tier 3 |未支援
+|32-bit ARMv7 |link:https://www.FreeBSD.org/platforms/arm/[armv7] |Tier 2 |Tier 2 |Tier 2
+|32-bit MIPS soft-float |link:https://www.FreeBSD.org/platforms/mips/[mips, mipsel] |Tier 2 |未支援 |未支援
+|32-bit MIPS hard-float |link:https://www.FreeBSD.org/platforms/mips/[mipshf, mipselhf] |Tier 2 |未支援 |未支援
+|32-bit MIPS n32 |link:https://www.FreeBSD.org/platforms/mips/[mipsn32] |Tier 2 |未支援 |未支援
+|64-bit MIPS soft-float |link:https://www.FreeBSD.org/platforms/mips/[mips64, mips64el] |Tier 2 |未支援 |未支援
+|64-bit MIPS hard-float |link:https://www.FreeBSD.org/platforms/mips/[mips64hf, mips64elhf] |Tier 2 |未支援 |未支援
+|32-bit PowerPC |link:https://www.FreeBSD.org/platforms/ppc/[powerpc] |Tier 2 |Tier 2 |未支援
+|32-bit PowerPC with SPE |link:https://www.FreeBSD.org/platforms/ppc/[powerpcspe] |Tier 2 |Tier 2 |未支援
+|64-bit PowerPC big-endian |link:https://www.FreeBSD.org/platforms/ppc/[powerpc64] |Tier 2 |Tier 2 |Tier 2
+|64-bit PowerPC little-endian |link:https://www.FreeBSD.org/platforms/ppc/[powerpc64le] |Tier 2 |Tier 2 |Tier 2
+|64-bit RISC-V |https://wiki.freebsd.org/riscv[riscv64] |Tier 2 |Tier 2 |Tier 2
+|64-bit RISC-V soft-float |https://wiki.freebsd.org/riscv[riscv64sf] |Tier 2 |未支援 |未支援
 |===
 
 == 不支援的平台
 
+這些平台只有舊版的 FreeBSD 支援
+
+[.tblbasic]
 [cols=",,",options="header",]
 |===
-|計劃頁面 |郵件論壇 |link:{committers-guide}#archs[支援平台]
-|link:https://www.FreeBSD.org/platforms/alpha/[FreeBSD/alpha 計劃] |freebsd-alpha@FreeBSD.org |Tier 4 (7.0R 後不繼續支援)
-|link:https://www.FreeBSD.org/platforms/ia64/[FreeBSD/ia64 計劃] |freebsd-ia64@FreeBSD.org |Tier 2 到 FreeBSD 10 ，之後不支援。
-|link:https://wiki.freebsd.org/riscv[FreeBSD/RISC-V Project] |freebsd-riscv@FreeBSD.org |自 FreeBSD 12 開始為 Tier 3
-|link:https://www.FreeBSD.org/platforms/pc98/[FreeBSD/pc98 計劃] |re-pc98@FreeBSD.org |Tier 2 到 FreeBSD 11 ，之後不支援。
+|平台名稱 |TARGET_ARCH |最後支援版本
+|Alpha |alpha |link:../releases/#rel6-4[6.4]
+|32-bit little-endian ARM v4/v5|arm |link:../releases/#rel12-4[12.4]
+|32-bit big-endian ARM |armeb |link:../releases/#rel11-4[11.4]
+|Intel IA-64 |ia64 |link:../releases/#rel10-4[10.4]
+|PC98 |pc98 |link:../releases/#rel11-4[11.4]
+|64-bit SPARCv9 |sparc64 |link:../releases/#rel12-4[12.4]
 |===
-
-一般性平台問題，請寄至 freebsd-arch@FreeBSD.org
